some abstractions